CHANGES IN VERSION 1.7.4
------------------------
 o now branch.length can set to feature available in phylo4d@data and yscale is supported for phylo4d object <2016-12-06, Tue>
 o bug fixed of rm.singleton.newick, remove singleton parent instead of singleton <2016-12-01, Thu>
 o reorder phylo to postorder before ladderrize <2016-11-28, Mon>
 o allow yscale to use data stored in phylo4d object <2016-11-24, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/98
 o groupOTU method now accept 'overlap = c("overwrite", "origin", "abandon")' parameter <2016-11-16, Wed>
   + https://groups.google.com/forum/#!topic/bioc-ggtree/Q4LnwoTf1DM

CHANGES IN VERSION 1.7.3
------------------------
 o drop.tip method for NHX object <2016-11-11, Fri>
 o update startup message <2016-11-09, Wed>
 o reverse timescale x-axis <2016-11-07, Mon>
   + https://github.com/GuangchuangYu/ggtree/issues/87

CHANGES IN VERSION 1.7.2
------------------------
 o make missing colors in gheatmap invisible (previously use 'white') <2016-11-03, Thu>
 o xlim_expand for setting x axis limits of specific panel <2016-11-01, Tue>
   + xlim_tree is now a specific case of xlim_expand(xlim, panel='Tree')
 o bug fixed of parsing tree text in beast file <2016-10-31, Mon>
   + https://github.com/GuangchuangYu/ggtree/issues/84

CHANGES IN VERSION 1.7.1
------------------------
 o xlim_tree layer and test <2016-10-31, Mon>
   + set x axis limits for Tree panel for facet_plot
 o update read.nhx <2016-10-30, Sun>
   + add tip numbers to @nhx_tags and add tests
   + https://github.com/GuangchuangYu/ggtree/pull/83
   + store nhx_tags$node as numeric values <2016-10-31, Mon>
 o facet_plot supports ggbio::geom_alignment <2016-10-26, Wed>
   + https://github.com/tengfei/ggbio/issues/83
 o make tree stats available in facet_plot <2016-10-24, Mon>

CHANGES IN VERSION 1.6.0
------------------------
 o BioC 3.4 released <2016-10-18, Tue>

CHANGES IN VERSION 1.5.17
------------------------