@@ -84,6 +84,7 @@ export(groupClade)
 export(groupOTU)
 export(gzoom)
 export(inset)
+export(is.ggtree)
 export(mask)
 export(merge_tree)
 export(msaplot)
